# project-poisson-probabilidade-falhas

./: README.md  equipamento.py  pyproject.toml
