[tool.poetry]
name = "streamlit"
version = "0.1.0"
description = ""
authors = ["nayarasobral <nayysobrall@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.0"
matplotlib = "^3.10.0"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
